# GPRJupyter

./: Dockerfile  Dockerfile.alpine  README  features.jup.txt  nginx.conf  nomad-patch.diff  nomad.yaml
GPRSchemas/: pyproject.toml
GPRSchemas/src/gpr_schemas_v2/: P0.py  __init__.py  base.py
GPRSchemas/src/gpr_schemas_v3/: P0.py
P0_Upload/: P0_EditExperiment.ipynb  P0_Fadenpendel.ipynb
_jupyter/: jupyter_lab_config.py
_local/share/jupyter/nbconvert/templates/hu/: index.tex.j2  nothubase.tex.j2  style_hu.tex.j2  style_hu_cpt.tex.j2  style_hu_gpr.tex.j2
gpr/: pyproject.toml
gpr/src/gpr/: P0_Editor.py  analysis.py
