[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "gpr_schemas_v2"
version = "0.0.2"
dependencies = ["nomad-lab"]

[project.urls]
Homepage = "https://example.com"
Documentation = "https://readthedocs.org"
Repository = "https://github.com/me/spam.git"
Issues = "https://github.com/me/spam/issues"
Changelog = "https://github.com/me/spam/blob/master/CHANGELOG.md"

[project.entry-points.'nomad.plugin']
schema_ep = "gpr_schemas_v2:schema_ep"

